--- a/stacks/ollama/.env
+++ b/stacks/ollama/.env
@@ -1,4 +1,4 @@
-TZ=America/Chicago
+TZ=Europe/London
 OLLAMA_KEEP_ALIVE=15m
 NVIDIA_DRIVER_CAPABILITIES=all # comment out if you aren't using NVIDIA GPUs
 NVIDIA_VISIBLE_DEVICES=all # comment out if you aren't using NVIDIA GPUs
