--- a/stacks/paperless/.env
+++ b/stacks/paperless/.env
@@ -1,4 +1,4 @@
-TZ=America/Chicago
+TZ=Europe/London
 PAPERLESS_REDIS=redis://redis:6379
 PAPERLESS_DBHOST=postgres
 PAPERLESS_DBNAME=paperless #if you change this, be sure to also change it in the postgres .env
