--- a/stacks/postgres/docker-compose.yaml
+++ b/stacks/postgres/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     env_file: 
       - .env
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql
     networks:
       paperless-stack:
         aliases:
