feat: add root .env with shared variables (IP, timezone, network)
- Created root .env with HOST_IP, NFS_SERVER_IP, TIMEZONE, DOCKER_NETWORK
- Updated all 10 service docker-compose.yaml to include root .env
- Updated all service .env files to reference root variables (TZ=${TIMEZONE})
- Changes only need to be made in one place now

--- a/stacks/dozzle/docker-compose.yaml
+++ b/stacks/dozzle/docker-compose.yaml
@@ -3,7 +3,8 @@ services:
     image: amir20/dozzle:latest
     restart: unless-stopped
     container_name: dozzle
-    env_file: 
+    env_file:
+      - ../../../.env
       - .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
