--- a/stacks/paperless-gpt/.env
+++ b/stacks/paperless-gpt/.env
@@ -1,4 +1,4 @@
-TZ=Europe/London
+TZ=${TIMEZONE}
 PAPERLESS_BASE_URL: "http://paperless:8000"
 PAPERLESS_API_TOKEN: some-token  # change to your paperless API token
 # PAPERLESS_PUBLIC_URL: "http://paperless.mydomain.com" # Optional
