--- a/stacks/paperless-ai/.env
+++ b/stacks/paperless-ai/.env
@@ -1,4 +1,4 @@
-TZ=Europe/London
+TZ=${TIMEZONE}
 PAPERLESS_API_URL=http://paperless:8000/api
 PAPERLESS_API_TOKEN=some-token # change to your paperless API token
 PAPERLESS_USERNAME=admin # change to your paperless username
