--- a/stacks/paperless-ai/docker-compose.yaml
+++ b/stacks/paperless-ai/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
+      - ../../../.env
       - .env
     volumes:
       - ./data:/app/data
