--- a/stacks/paperless-gpt/docker-compose.yaml
+++ b/stacks/paperless-gpt/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     ports:
       - "3002:8080"
     env_file:
+      - ../../../.env
       - .env
     volumes:
       - ./prompts:/app/prompts
