--- a/stacks/redis/docker-compose.yaml
+++ b/stacks/redis/docker-compose.yaml
@@ -3,7 +3,8 @@ services:
     image: docker.io/library/redis:8
     container_name: redis
     restart: unless-stopped
-    env_file: 
+    env_file:
+      - ../../../.env
       - .env
     volumes:
       - ./data:/data
