--- a/stacks/tika/docker-compose.yaml
+++ b/stacks/tika/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     container_name: tika
     restart: unless-stopped
     env_file:
+      - ../../../.env
       - .env
     networks:
       paperless-stack:
