fix: correct .env path resolution and expand variables
- Fixed relative path from ../../../.env to ../../.env in all composed files
- Updated deploy.sh to source root .env and export variables
- Expanded TZ variable references to literal Europe/London values
- Fixes TIMEZONE variable warnings and path resolution errors

--- a/stacks/paperless-gpt/docker-compose.yaml
+++ b/stacks/paperless-gpt/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "3002:8080"
     env_file:
-      - ../../../.env
+      - ../../.env
       - .env
     volumes:
       - ./prompts:/app/prompts
