--- a/stacks/dozzle/docker-compose.yaml
+++ b/stacks/dozzle/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     container_name: dozzle
     env_file:
-      - ../../../.env
+      - ../../.env
       - .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
