--- a/stacks/gotenberg/docker-compose.yaml
+++ b/stacks/gotenberg/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: docker.io/gotenberg/gotenberg:8.25
     container_name: gotenberg
     env_file:
-      - ../../../.env
+      - ../../.env
       - .env
     restart: unless-stopped
     command:
