--- a/stacks/open-webui/docker-compose.yaml
+++ b/stacks/open-webui/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: open-webui
     restart: unless-stopped
     env_file:
-      - ../../../.env
+      - ../../.env
       - .env
     ports:
       - "3001:8080"
