--- a/stacks/postgres/docker-compose.yaml
+++ b/stacks/postgres/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     container_name: postgres
     env_file:
-      - ../../../.env
+      - ../../.env
       - .env
     volumes:
       - ./data:/var/lib/postgresql
